--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </p> -->
       <div class = "resume__wrapper">
         <h2>
-          Skills
+          Skills and Experience
         </h2>
         <ul>
           <li>HTML</li>
