added resume button, changed link colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <ul class="nav__items">
       
             <li><a href="#about">About</a></li>
-            <li><a href="#portfolio">My Work</a></li>
+            <li><a href="#portfolio">Projects</a></li>
+            <li><a href="https://github.com/lindseykeller" target="_blank">Github</a></li>
            
         </ul>
 
@@ -39,14 +40,14 @@
         <span>Lindsey</span>
   
       </h1>
-      <p>I'm a Front-end Developer based in California.
+      <p>I'm a front-end developer based in California.
       </p>
       <!-- <h1 id = "about">Hi there, I'm Lindsey Keller.</h1>
       <p>I'm a Front-end Developer based in California.
       </p> -->
       <div class = "resume__wrapper">
         <h2>
-          Skills and Experience
+          Skills and experience
         </h2>
         <ul>
           <li>HTML</li>
@@ -55,6 +56,7 @@
           <li>React</li>
           <li>PHP and mySQL</li>
         </ul>
+        <button class="resume-btn"><a href="#">Resume - pdf</a></button>
     </div>
 
    </div>
@@ -65,7 +67,7 @@
 
   <section class = "portfolio__section">
 
-    <h2 id ="portfolio">Recent Projects</h2>
+    <h2 id ="portfolio">Some of my recent projects</h2>
     <div class = "portfolio__wrapper" >
 
       <div class = "featured_portolio_image">
